RESOLVED FIXED309668
REGRESSION(309047@main)[WPE]: Build with ENABLE_WPE_PLATFORM=OFF fails
https://bugs.webkit.org/show_bug.cgi?id=309668
Summary REGRESSION(309047@main)[WPE]: Build with ENABLE_WPE_PLATFORM=OFF fails
Carlos Alberto Lopez Perez
Reported 2026-03-11 06:06:35 PDT
Build failure: /usr/lib/ccache/clang++-20 -DBUILDING_MiniBrowser -DBUILDING_WEBKIT=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WPE__=1 -DGETTEXT_PACKAGE=\"WPE\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DPAS_BMALLOC=1 -DSK_ASSUME_GL=0 -DSK_ASSUME_GL_ES=1 -DSK_ASSUME_WEBGL=0 -DSK_DISABLE_LEGACY_GL_MAKE_NATIVE_INTERFACE -DSK_DISABLE_LEGACY_IMAGE_READBUFFER -DSK_DISABLE_LEGACY_INIT_DECODERS -DSK_DISABLE_LEGACY_PNG_WRITEBUFFER -DSK_DISABLE_TRACING -DSK_DISABLE_WEBGL_INTERFACE -DSK_ENABLE_PRECOMPILE -DSK_R32_SHIFT=16 -DSK_RELEASE -DSK_TRIVIAL_ABI=[[clang::trivial_abi]] -DSTATICALLY_LINKED_WITH_WPEToolingBackends -DUSE_ATK=1 -DUSE_GLIB=1 -DUSE_SYSTEM_EGL -DWPE_BACKEND_FDO -D_GLIBCXX_ASSERTIONS=1 -I/home/clopez/webkit/WebKitBuild/WPE/Release -I/home/clopez/webkit/WebKitBuild/WPE/Release/DerivedSources/WebKit/wpe -I/home/clopez/webkit/WebKitBuild/WPE/Release/DerivedSources/ForwardingHeaders/wpe -I/home/clopez/webkit/WebKitBuild/WPE/Release/JavaScriptCoreGLib/DerivedSources -I/home/clopez/webkit/WebKitBuild/WPE/Release/JavaScriptCoreGLib/Headers -I/usr/include/gstreamer-1.0 -I/home/clopez/webkit/WebKitBuild/WPE/Release/DerivedSources/ForwardingHeaders -I/home/clopez/webkit/WebKitBuild/WPE/Release/DerivedSources/WebKit -I/home/clopez/webkit/WebKitBuild/WPE/Release/JavaScriptCore/Headers -I/home/clopez/webkit/WebKitBuild/WPE/Release/JavaScriptCore/PrivateHeaders -I/home/clopez/webkit/WebKitBuild/WPE/Release/PAL/Headers -I/home/clopez/webkit/WebKitBuild/WPE/Release/WTF/Headers -I/home/clopez/webkit/WebKitBuild/WPE/Release/WebCore/PrivateHeaders -I/home/clopez/webkit/WebKitBuild/WPE/Release/bmalloc/Headers -I/home/clopez/webkit/Source/ThirdParty/skia -I/home/clopez/webkit/WebKitBuild/WPE/Release/Skia/Headers/top -I/home/clopez/webkit/WebKitBuild/WPE/Release/Skia/Headers/mod -I/home/clopez/webkit/Source/ThirdParty/libsysprof-capture -I/home/clopez/webkit/WebKitBuild/WPE/Release/ANGLE/Headers -I/home/clopez/webkit/WebKitBuild/WPE/Release/WPEToolingBackends/Headers -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -isystem /home/clopez/webkit/WebKitBuild/DependenciesWPE/Root/include/libsoup-3.0 -isystem /home/clopez/webkit/WebKitBuild/DependenciesWPE/Root/include/wpe-1.0 -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /usr/include/libxml2 -isystem /usr/include/gio-unix-2.0 -isystem /usr/include/avif -isystem /usr/include/harfbuzz -isystem /usr/include/libdrm -isystem /home/clopez/webkit/WebKitBuild/DependenciesWPE/Root/include/wpe-fdo-1.0 -isystem /usr/include/atk-1.0 -fdiagnostics-color=always -fcolor-diagnostics -Wextra -Wall -Werror=undefined-internal -Werror=undefined-inline -pipe -Wno-noexcept-type -Wno-nullability-completeness -Wno-psabi -Wno-misleading-indentation -Wno-parentheses-equality -Qunused-arguments -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fdebug-types-section -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++23 -fPIE -fvisibility=hidden -fvisibility-inlines-hidden -I/usr/include -pthread -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -DWPE_ENABLE_XKB=1 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/gio-unix-2.0 -DHWY_STATIC_DEFINE -DAVIF_DLL -DHAVE_HB_FEATURES_H -MD -MT Tools/MiniBrowser/wpe/CMakeFiles/MiniBrowser.dir/main.cpp.o -MF Tools/MiniBrowser/wpe/CMakeFiles/MiniBrowser.dir/main.cpp.o.d -o Tools/MiniBrowser/wpe/CMakeFiles/MiniBrowser.dir/main.cpp.o -c /home/clopez/webkit/Tools/MiniBrowser/wpe/main.cpp ../../../Tools/MiniBrowser/wpe/main.cpp:497:45: error: use of undeclared identifier 'configFile'; did you mean 'cookiesFile'? 497 | if (!g_key_file_load_from_file(keyFile, configFile, G_KEY_FILE_NONE, &error)) { | ^~~~~~~~~~ | cookiesFile ../../../Tools/MiniBrowser/wpe/main.cpp:62:20: note: 'cookiesFile' declared here 62 | static const char* cookiesFile; | ^ ../../../Tools/MiniBrowser/wpe/main.cpp:498:54: error: use of undeclared identifier 'configFile'; did you mean 'cookiesFile'? 498 | g_warning("Error loading key file '%s': %s", configFile, error->message); | ^~~~~~~~~~ | cookiesFile /usr/include/glib-2.0/glib/gmessages.h:364:32: note: expanded from macro 'g_warning' 364 | __VA_ARGS__) | ^ ../../../Tools/MiniBrowser/wpe/main.cpp:62:20: note: 'cookiesFile' declared here 62 | static const char* cookiesFile; | ^ ../../../Tools/MiniBrowser/wpe/main.cpp:505:80: error: use of undeclared identifier 'configFile'; did you mean 'cookiesFile'? 505 | g_warning("Error applying WebKit settings from key file '%s': %s", configFile, error->message); | ^~~~~~~~~~ | cookiesFile /usr/include/glib-2.0/glib/gmessages.h:364:32: note: expanded from macro 'g_warning' 364 | __VA_ARGS__) | ^ ../../../Tools/MiniBrowser/wpe/main.cpp:62:20: note: 'cookiesFile' declared here 62 | static const char* cookiesFile; | ^ ../../../Tools/MiniBrowser/wpe/main.cpp:834:9: error: use of undeclared identifier 'configFile' 834 | if (configFile) { | ^ 4 errors generated. ninja: build stopped: subcommand failed.
Attachments
Carlos Alberto Lopez Perez
Comment 1 2026-03-11 06:09:48 PDT
EWS
Comment 2 2026-03-11 08:11:22 PDT
Committed 309057@main (115773ce4c79): <https://commits.webkit.org/309057@main> Reviewed commits have been landed. Closing PR #60357 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.