REGRESSION(309047@main)[WPE]: Build with ENABLE_WPE_PLATFORM=OFF fails https://bugs.webkit.org/show_bug.cgi?id=309668

Reviewed by Claudio Saavedra.

The configFile variable definition needs to be be delared outside of
the ENABLE_WPE_PLATFORM macro guard.

* Tools/MiniBrowser/wpe/main.cpp:

Canonical link: https://commits.webkit.org/309057@main